--- a/rfrct/templates/macros/_formhelpers.html
+++ b/rfrct/templates/macros/_formhelpers.html
@@ -1,4 +1,24 @@
+{% import "macros/tabler.html" as tabler %}
 
+
+{% macro tabler_field(field) %}
+    {% set macro_name = 'tabler_field_' + field.type %}
+    {% if tabler[macro_name] %}
+        {{ tabler[macro_name](field) }}
+    {% else %}
+        {{ field.type }}
+    {% endif %}
+{% endmacro %}
+
+{% macro tabler_form(form) %}
+    <form method="post">
+        {{ form.csrf_token }}
+        {% for field in form %}
+            {{ tabler_field(field) }}
+        {% endfor %}
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+{% endmacro %}
 
 {% macro render_field(field) %}
     {{ field.label }}
@@ -19,7 +39,7 @@
     {{ form.csrf_token }}
 
     {% for field in form %}
-        {{ render_field(field) }}
+        {{ tabler_field(field) }}
     {% endfor %}
 {% endmacro %}
 
